--- a/week7/frontend/package.json
+++ b/week7/frontend/package.json
@@ -23,7 +23,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "node-sass": "^5.0.0",
     "pug": "^3.0.0",
-    "pug-plain-loader": "^1.1.0"
+    "pug-plain-loader": "^1.1.0",
+    "sass-loader": "^10.1.0"
   }
 }
