--- a/week8/front-end/package.json
+++ b/week8/front-end/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bulma": "^0.9.1",
     "core-js": "^3.6.5",
+    "pretty-checkbox": "^3.0.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
