--- a/week8/front-end/package.json
+++ b/week8/front-end/package.json
@@ -24,8 +24,8 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^7.4.1",
     "node-sass": "^5.0.0",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.1.0",
