--- a/week8/frontend/package.json
+++ b/week8/frontend/package.json
@@ -9,12 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "bulma": "^0.9.1",
+    "bulma": "^0.9.2",
     "core-js": "^3.6.5",
     "pretty-checkbox": "^3.0.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "vuex-flash": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
